<resources>
    <string name="app_name">ToDoListApp</string>
    <string name="things_to_do">things to do</string>
    <string name="enter_to_do_title">Enter to do title</string>
    <string name="add_to_do">Add to do</string>
    <string name="delete_to_do">Delete to do</string>
    <string name="welcome">Welcome</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">username</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="registration">Registration</string>
    <string name="example">Example</string>
</resources>